--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -20,16 +20,31 @@
             if(v.length == 11) i.value += "-";
         }
         </script>
+            <script>
+                // pra abrir o menu
+                function abre() {
+                document.getElementById("mySidenav").style.width = "250px";
+                }
+                // pra fechar o menu
+                function fecha() {
+                document.getElementById("mySidenav").style.width = "0";
+                }
+            </script>
+            <header class="navbar">
+                <div class="menu">
+                    <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+                </div>
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                    <a href="/login">Login</a>
+                </div>
+                <a href="/">
+                    <img src="../static/public/logo.png" alt="logo">
+                </a>
+                </div>
+        </header>
     </head>
     <body>
-        <header class="navbar">
-            <a href="/">
-                <img src="../static/public/logo.png" alt="logo">
-            </a>
-            <div class="links">
-                <a href="/login">Entrar</a>
-            </div>
-        </header>
         <div>
             
             <form action="#" method="post" class="cadastro-form">
