--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,17 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/styles.css">
+    <script>
+        // pra abrir o menu
+        function abre() {
+        document.getElementById("mySidenav").style.width = "250px";
+        }
+        // pra fechar o menu
+        function fecha() {
+        document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
     <title>Acesse sua conta</title>
 </head>
 <body>
     <header class="navbar">
+        <div class="menu">
+            <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+            <a href="/cadastro">Cadastro</a>
+        </div>
         <a href="/">
             <img src="../static/public/logo.png" alt="logo">
         </a>
-        <div class="links">
-            <a href="/cadastro">Cadastro</a>
         </div>
-    </header>
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
     
 
