--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/requisicoes.css">
     <title>Requisições</title>
+    <link rel="stylesheet" href="../static/styles/styles.css">
+        <header class="navbar">
+            <script>
+                function cpf(i){
+                var v =i.value;
+                if(isNaN(v[v.length-1])){//impede de entrar qualquer coisa além de número
+                    i.value = v.substring(0, v.length-1);
+                    return;
+            }
+            
+                i.setAttribute("maxlength", "14");
+                if(v.length == 3) i.value += ".";
+                if(v.length == 7) i.value += ".";
+                if(v.length == 11) i.value += "-";
+            }
+            </script>
+                <script>
+                    // pra abrir o menu
+                    function abre() {
+                    document.getElementById("mySidenav").style.width = "250px";
+                    }
+                    // pra fechar o menu
+                    function fecha() {
+                    document.getElementById("mySidenav").style.width = "0";
+                    }
+                </script>
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/home">Home</a>
+                <a href="/loggout">Sair</a>
+            </div>
+            <a href="/">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="user">
+                <a href="/user">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+            </div>
+            </div>
+    </header>
 </head>
 <!-- Requisições de depósito -->
 {% if tipo == 'confirmacao_deposito' %}
     {% for requisição in requisicoesDeposito %}
-        <form action="">
+<div class="row">
+    <div class="leftcolumn">
+    <div class="card">
+    <form action="#" method="post" class="req-form">
         {% for chave, valor in requisição.items() %}
             {% if chave == 'id_confirmacao_deposito' %}
                 {% set id = valor %}
@@ -31,13 +80,17 @@
         <button><a href="{{ '/aceita/%s/%s' % (tipo, id)}}">{{id}}</a></button>
         <button><a href="{{'/recusa/%s/%s' % (tipo, id)}}">recusar</a></button>
         </form>
+        </div>
+        </div>
     {% endfor %}
 {% endif %}
 
 <!-- Requisições de abertura de conta-->
 {% if tipo == 'confirmacao_cadastro' %}
     {% for requisição in confirmacao_cadastro %}
-        <form action="">
+    <div class="rightcolumn">
+    <div class="card">
+    <form action="#" method="post" class="req-form">
         {% for chave, valor in requisição.items() %}
             {% if chave == 'id_cadastro' %}
                 {% set id = valor %}
@@ -77,9 +130,12 @@
                 <label for="numero_conta">Conta:</label>
                 <input type="text" value="{{valor}}" readonly>
             {% endif %}
-            <button><a href="{{'/aceita/%s/%s' % (tipo, id)}}"></a></button>
-            <button><a href="{{'/recusa/%s/%s' % (tipo, id)}}"></a></button>
+            <button><a href="{{'/aceita/%s/%s' % (tipo, id)}}">aceita</a></button>
+            <button><a href="{{'/recusa/%s/%s' % (tipo, id)}}"></a>recusa</button>
         {% endfor %}    
         </form>
+        </div>
+        </div>
+        </div>
     {% endfor %}
 {% endif %}
