--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -5,17 +5,34 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Saque</title>
+        <script>
+            // pra abrir o menu
+            function abre() {
+            document.getElementById("mySidenav").style.width = "250px";
+            }
+            // pra fechar o menu
+            function fecha() {
+            document.getElementById("mySidenav").style.width = "0";
+            }
+        </script>
         <link rel="stylesheet" href="../static/styles/styles.css">
     </head>
     <body>
         <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/home">Home</a>
+                <a href="/loggout">Sair</a>
+            </div>
             <a href="/">
                 <img src="../static/public/logo.png" alt="logo">
             </a>
-            <div class="links">
-                <a href="/home">Home </a> <span>|</span>
-                <a href="/loggout">Sair</a>
-                
+            <div class="user">
+                <a href="/user">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
             </div>
         </header>
             {% with mensagens = get_flashed_messages() %}
