--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,7 +27,10 @@
             <a href="/home">Home</a>
             <a href="/saque">Saque</a>
             <a href="/deposito">Deposito</a>
+            <a href="/extrato">Extrato</a>        
             <a href="/loggout">Sair</a>
+            <br>
+            <a href="/reqEncerramento">Deletar conta</a>
         </div>
         <a href="/">
             <img src="../static/public/logo.png" alt="logo">
