--- a/src/templates/homegerente.html
+++ b/src/templates/homegerente.html
@@ -3,5 +3,5 @@
     <a href="/requisicoes/confirmacao_deposito">Requisicoes de depósito</a>
     <a href="/requisicoes/alteracao_cadastral">Requisicoes de alteração cadastral</a>
     <a href="/requisicoes/encerramento_conta">Requisicoes de encerramento de conta</a>
-    <a href="/requisicoes/confirmacao_cadastro">Requisicoes de criação cadastral</a>
+    <a href="/requisicoes/confirmacao_cadastro">Requisicoes de abertura de conta</a>
 {% endblock %}
