--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -52,7 +52,7 @@ body {
 
 .navbar img {
     margin-top: 2vh;
-    margin-left: 2vw;
+    margin-left:50%;
     width: 8vw;
     height: 16vh;
 }
@@ -425,4 +425,66 @@ body {
   display:block;
   cursor: pointer;
   height: 4vh;
+}
+/* requisições */
+
+.leftcolumn {   
+    float: center;
+    width: 100%;
+	margin-left:30%;
+	margin-right:30%;
+}
+
+
+.rightcolumn {
+    float: center;
+    width: 100%;
+	margin-left:30%;
+	margin-right:30%;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+	float:center;
+}
+.req-form{
+  text-align:center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f0e5c7;
+  padding: 25px;
+  border-radius:10px;
+}
+
+.req-form label{
+  font-size:20px;
+  margin: 15px 0;
+}
+.req-form input{
+  font-size:16px;
+  width:100%;
+  padding:15px 5px;
+  border: 0;
+  outline:none;
+  border-radius:10px;
+
+}
+
+.req-form button {
+  font-size: 1.5vw;
+  font-weight:bold;
+  padding:10px 15px;
+  width:50%;
+  border-radius:5px;
+  border:0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  display:block;
+  cursor: pointer;
+}
+
+.req-form button:hover { 
+  background-color: rgb(255, 85, 0);
+  transition: 300ms;
 }
