--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -79,8 +79,8 @@
             
         {% endfor %}
         {% set id = requisição["id_confirmacao_deposito"] %}        
-        <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}">Aceitar</a></button>
-            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}">Recusar</a></button>
+        <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}" class="nav-link">Aceitar</a></button>
+            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}" class="nav-link">Recusar</a></button>
         </form>
         </div>
         </div>
@@ -135,8 +135,8 @@
 
         {% endfor %}    
         {% set id = requisição["id_cadastro"] %} 
-            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}">Aceitar</a></button>
-            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}">Recusar</a></button>
+            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}"class="nav-link2">Aceitar</a></button>
+            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}" class="nav-link2">Recusar</a></button>
         </form>
         </div>
         </div>
@@ -187,8 +187,8 @@
 
         {% endfor %}    
         {% set id = requisição["id_alteracao"] %} 
-            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}">Aceitar</a></button>
-            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}">Recusar</a></button>
+            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}" class="nav-link2">Aceitar</a></button>
+            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}" class="nav-link2">Recusar</a></button>
         </form>
         </div>
         </div>
@@ -218,8 +218,8 @@
 
         {% endfor %}    
         {% set id = requisição["id_alteracao"] %} 
-            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}">Aceitar</a></button>
-            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}">Recusar</a></button>
+            <button><a href="{{'/resposta/aceita/%s/%s' % (tipo, id)}}" class="nav-link2">Aceitar</a></button>
+            <button><a href="{{'/resposta/recusa/%s/%s' % (tipo, id)}}" class="nav-link2">Recusar</a></button>
         </form>
         </div>
         </div>
