--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -51,8 +51,8 @@
         <h2>Saldo: {{saldo}}</h2>
         <div>
             
-            <button><a href="/saque">Saque</a></button>
-            <button><a href="/deposito">Depósito</a></button>
+            <button><a href="/saque" class="nav-link">Saque</a></button>
+            <button><a href="/deposito" class="nav-link">Depósito</a></button>
         </div>
     </div>
 
