informações do usuário bloqueadas

--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -40,6 +40,7 @@
         <div class="divtabuser">
             <div class="dirowuser">
                 <div class="userinfo">
+                    <fieldset disabled="disabled">
                     <br>
                     <label for="nome">Nome:</label><br>
                         <input type="text" name="nome"><br>
@@ -90,6 +91,7 @@
                             <option value="Outro">Outro</option>
                             <option value="Prefiro não informar">Prefiro não informar</option>
                         </select>
+                    </fieldset>
                 </div>
                 <div class="espaço"></div>
                 <div class="useralt"><br>
