Implementação do envio de requisição de encerramento de conta para o banco de dado

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -29,14 +29,14 @@
             <a href="/deposito">Deposito</a>
             <a href="/extrato">Extrato</a>        
             <a href="/loggout">Sair</a>
+            <a href="/mudancaCadastral">Perfil de usuário</a>
             <br>
-            <a href="/reqEncerramento">Deletar conta</a>
         </div>
         <a href="/">
             <img src="../static/public/logo.png" alt="logo">
         </a>
         <div class="user">
-            <a href="/user">
+            <a href="/mudancaCadastral">
             <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
         </div>
     </header>
