Mudança dos links da logo, antes chamavam para a tela de login, agora chamam para home

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -32,7 +32,7 @@
             <a href="/mudancaCadastral">Perfil de usuário</a>
             <br>
         </div>
-        <a href="/">
+        <a href="/home">
             <img src="../static/public/logo.png" alt="logo">
         </a>
         <div class="user">
