--- a/src/templates/transferencia.html
+++ b/src/templates/transferencia.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="navbar">
-            <a href="/">
+            <a href="/home">
                 <img src="../static/public/logo.png" alt="logo">
             </a>
             <div class="links">
