--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -28,7 +28,7 @@
             <a href="/deposito">Deposito</a>
             <a href="/loggout">Sair</a>
         </div>
-        <a href="/">
+        <a href="/home">
             <img src="../static/public/logo.png" alt="logo">
         </a>
         <div class="user">
