--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -38,7 +38,7 @@
                     <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                     <a href="/login">Login</a>
                 </div>
-                <a href="/">
+                <a href="/home">
                     <img src="../static/public/logo.png" alt="logo">
                 </a>
                 </div>
