--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -39,7 +39,7 @@
                 <a href="/home">Home</a>
                 <a href="/loggout">Sair</a>
             </div>
-            <a href="/">
+            <a href="/home">
                 <img src="../static/public/logo.png" alt="logo">
             </a>
             <div class="user">
