Número da agência é exibido na tela home

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -47,7 +47,7 @@
         {% else %}]
         <p>Não está logado ainda</p>
         {% endif %}
-        <h2>Conta: {{numero_conta}}</h2>
+        <h2>Conta: {{numero_conta}}   Agência: {{numero_agencia}}</h2>
         <h2>Saldo: {{saldo}}</h2>
         <div>
             
