--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -32,7 +32,7 @@
             <img src="../static/public/logo.png" alt="logo">
         </a>
         <div class="user">
-            <a href="/user">
+            <a href="/mudancaCadastral">
             <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
         </div>
     </header>
