--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -232,4 +232,4 @@
     {% endfor %}
 {% endif %}
 
-<button><a href="/home">Votar</a></button>
+<a href="/home" class="voltar2"><button>Voltar</button></a>
