--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -49,7 +49,7 @@
                     <input type="text" name="saque" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                 
                     <input type="submit" value="Sacar" id="sacar">
-                    <button class="teste1"><a href="/home">Voltar</a></button>
+                    <a href="/home" class="voltar"><button>Voltar</button></a>
                 </form>
                 </span>
             </div>
